--- a/packages.html
+++ b/packages.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/FontAwesome.Pro.6.4.2/css/all.css" />
     <link rel="stylesheet" href="style/nav.css">
 	<link rel="stylesheet" href="style/package.css">
+	<link rel="stylesheet" href="style/footer.css">
     <title>Package</title>
     <script>
 		window.onload = function () {
@@ -159,6 +160,16 @@
 	</nav>
 
 
+	<div class="info content-center">
+		<h2>لورم ایپسوم</h2>
+		<p>
+			لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+		</p>
+		<p>
+			لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+		</p>
+	</div>
+
 	<div class="packages">
 		<div class="package-controller">
 			<button type="button">فامیلی</button>
@@ -201,6 +212,33 @@
 				<div class="package-bottom-shape"></div>
 			</div> -->
 
+		</div>
+	</div>
+
+
+	<div class="footer">
+		<h1>ارتباط با ما</h1>
+		<div class="communication">
+			<div class="right-area">
+				<h3>شماره های تماس</h3>
+				<div>
+					<p>07xxxxxxxxx</p>
+					<p>07xxxxxxxxx</p>
+				</div>
+				<h3>ایمیل آدرس</h3>
+				<div>
+					<p>www.yarginmirzad@gmail.com</p>
+				</div>
+			</div>
+			<div class="left-area">
+				<h3>شبکه های اجتماعی</h3>
+				<ul>
+					<li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+					<li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
+					<li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+					<li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 
