--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 	<link rel="stylesheet" href="style/footer.css">
 	<link rel="stylesheet" href="assets/FontAwesome.Pro.6.4.2/css/all.css" />
 	<script>
-		window.onload = function () {
-			document.body.style.visibility = "visible";
-		};
+		// window.onload = function () {
+		// 	document.body.style.visibility = "visible";
+		// };
 	</script>
 </head>
 
 <body>
 
-	<div class="languages">
+	<div class="languages" id="home">
 		<a href="">English</a>
 		<a href="">دری</a>
 	</div>
@@ -29,8 +29,8 @@
 		<i class="fa-light fa-bars fa-2x navOpenBtn "></i>
 		<ul class="horizontal-nav-items">
 
-			<li><a href="index.html">پیشنهاد</a></li>
-			<li><a href="index.html">درباره ما</a></li>
+			<li><a class="section-links" href="#offer">پیشنهاد</a></li>
+			<li><a class="section-links" href="#aboutUs">درباره ما</a></li>
 			<li>
 				<div>نمایندگی ها</div>
 				<ul>
@@ -82,9 +82,9 @@
 					</li>
 				</ul>
 			</li>
-			<li><a href="index.html">خدمات ما</a></li>
+			<li><a class="section-links" href="#services">خدمات ما</a></li>
 
-			<li><a href="index.html">صفحه اصلی</a></li>
+			<li><a class="section-links" href="#home">صفحه اصلی</a></li>
 
 		</ul>
 	</nav>
@@ -193,7 +193,7 @@
 		<!-- /onclick js -->
 	</div>
 
-	<div class="service">
+	<div class="service" id="services">
 		<div class="service-title">
 			<h1>خدمات ما</h1>
 		</div>
@@ -291,7 +291,7 @@
 
 
 
-	<div class="about_us">
+	<div class="about_us"  id="aboutUs">
 
 		<h1>در باره ما</h1>
 		<div class="tabs">
@@ -430,7 +430,8 @@
 
 	</div>
 
-	<div class="proposal">
+
+	<div class="proposal" id="offer">
 		<div class="proposal-title">
 			<h1>پیشنهاد</h1>
 		</div>
@@ -509,6 +510,48 @@
 
 
 	</script>
+
+
+<script>
+
+	
+window.onload = () => {
+    const links = document.querySelectorAll(".section-links");
+  
+    links.forEach(link => {
+		console.log(link);
+        link.addEventListener("click", (e) =>{
+            e.preventDefault();
+            document.querySelector(e.target.hash).scrollIntoView({
+                behavior: "smooth"
+            })
+        });
+    })
+}
+
+
+
+// window.onscroll = () => {
+  
+// //    .header-container.scrolled
+
+//     const headerContainer = document.querySelector(".header-container");
+
+//     if(this.scrollY > 0){
+//        if(!headerContainer.classList.contains("scrolled")){
+//         headerContainer.classList.add("scrolled");
+//        }
+//     }else{
+//         if(headerContainer.classList.contains("scrolled")){
+//             headerContainer.classList.remove("scrolled");
+//            }
+//     }
+
+  
+// }
+
+
+</script>
 
 </body>
 
