--- a/packages.html
+++ b/packages.html
@@ -24,9 +24,8 @@
 		<a href=""><img src="assets/images/logo.png" alt="" class="logo" width="80"></a>
 		<i class="fa-light fa-bars fa-2x navOpenBtn "></i>
 		<ul class="horizontal-nav-items">
-
-			<li><a href="index.html">پیشنهاد</a></li>
-			<li><a href="index.html">درباره ما</a></li>
+			<li><a href="index.html#offer">پیشنهاد</a></li>
+			<li><a href="index.html#aboutUs">درباره ما</a></li>
 			<li>
 				<div>نمایندگی ها</div>
 				<ul>
@@ -78,9 +77,9 @@
 					</li>
 				</ul>
 			</li>
-			<li><a href="index.html">خدمات ما</a></li>
+			<li><a href="index.html#services">خدمات ما</a></li>
 
-			<li><a href="index.html">صفحه اصلی</a></li>
+			<li><a href="index.html#home">صفحه اصلی</a></li>
 
 		</ul>
 	</nav>
@@ -93,8 +92,8 @@
 
 		<div class="sidebar-content">
 			<ul class="menu">
-				<li class="menu-item"><a href="index.html">صفحه اصلی</a></li>
-				<li class="menu-item"><a href="index.html">خدمات ما</a></li>
+				<li class="menu-item"><a href="index.html#home">صفحه اصلی</a></li>
+				<li class="menu-item"><a href="index.html#services">خدمات ما</a></li>
 				<li class="menu-item">
 					<div><i class="fa-solid fa-plus"></i><span>نمایندگی ها</span></div>
 					<ul class="sub-menu">
@@ -153,8 +152,8 @@
 
 					</ul>
 				</li>
-				<li class="menu-item"><a href="index.html">درباره ما</a></li>
-				<li class="menu-item"><a href="index.html">پیشنهاد</a></li>
+				<li class="menu-item"><a href="index.html#aboutUs">درباره ما</a></li>
+				<li class="menu-item"><a href="index.html#offer">پیشنهاد</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -171,47 +170,215 @@
 	</div>
 
 	<div class="packages">
-		<div class="package-controller">
-			<button type="button">فامیلی</button>
-			<button type="button">نامحدود</button>
-			<button type="button" class="active">محدود</button>
+		<div class="package-controller tabs">
+			<button class="tab_btn active" type="button">محدود</button>
+			<button class="tab_btn" type="button">نامحدود</button>
 		</div>
 
-		<div class="package-detail">
+		<div class="content_box">
 
-			
-			<!-- <div class="package">
-				<div class="package-shape">
-					<div class="package-top-shape-rectangle">
-						<div class="package-top-shape-data">
-							<h2>25 GB</h2>
+			<div class="content active">
+				<div class="package-detail ">
+
+					<div class="package ">
+						<div class="package-shape">
+							<div class="package-top-shape-rectangle">
+								<div class="package-top-shape-data">
+									<h2>75 GB</h2>
+								</div>
+								<div class="package-shape-top-triangle"></div>
+							</div>
+						</div> 
+						<div class="package-data">
+							<div class="package-data-money">
+								<i class="fa-regular fa-money-bill"></i>
+								<p> 750 افغانی</p>
+							</div>
+		
+							<div class="package-data-duration">
+								<i class="fa-solid fa-calendar-days"></i>
+								<p>یک ماه</p>
+							</div>
+		
+							<div class="package-data-speed">
+								<i class="fa-regular fa-gauge"></i>
+								<p>2 Mbs</p>
+							</div>
+							<div class="package-data-connectionType">
+								<i class="fa-solid fa-signal-stream"></i>
+								<p>اختصاصی</p>
+							</div>
 						</div>
-						<div class="package-shape-top-triangle"></div>
-					</div>
-				</div> 
-				<div class="package-data">
-					<div class="package-data-money">
-						<i class="fa-regular fa-money-bill"></i>
-						<p> 750 افغانی</p>
+						<div class="package-bottom-shape"></div>
 					</div>
 
-					<div class="package-data-duration">
-						<i class="fa-solid fa-calendar-days"></i>
-						<p>یک ماه</p>
+					<div class="package ">
+						<div class="package-shape">
+							<div class="package-top-shape-rectangle">
+								<div class="package-top-shape-data">
+									<h2>45 GB</h2>
+								</div>
+								<div class="package-shape-top-triangle"></div>
+							</div>
+						</div> 
+						<div class="package-data">
+							<div class="package-data-money">
+								<i class="fa-regular fa-money-bill"></i>
+								<p> 750 افغانی</p>
+							</div>
+		
+							<div class="package-data-duration">
+								<i class="fa-solid fa-calendar-days"></i>
+								<p>یک ماه</p>
+							</div>
+		
+							<div class="package-data-speed">
+								<i class="fa-regular fa-gauge"></i>
+								<p>2 Mbs</p>
+							</div>
+							<div class="package-data-connectionType">
+								<i class="fa-solid fa-signal-stream"></i>
+								<p>اختصاصی</p>
+							</div>
+						</div>
+						<div class="package-bottom-shape"></div>
 					</div>
 
-					<div class="package-data-speed">
-						<i class="fa-regular fa-gauge"></i>
-						<p>2 Mbs</p>
-					</div>
-					<div class="package-data-connectionType">
-						<i class="fa-solid fa-signal-stream"></i>
-						<p>اختصاصی</p>
+					<div class="package">
+						<div class="package-shape">
+							<div class="package-top-shape-rectangle">
+								<div class="package-top-shape-data">
+									<h2>25 GB</h2>
+								</div>
+								<div class="package-shape-top-triangle"></div>
+							</div>
+						</div> 
+						<div class="package-data">
+							<div class="package-data-money">
+								<i class="fa-regular fa-money-bill"></i>
+								<p> 750 افغانی</p>
+							</div>
+		
+							<div class="package-data-duration">
+								<i class="fa-solid fa-calendar-days"></i>
+								<p>یک ماه</p>
+							</div>
+		
+							<div class="package-data-speed">
+								<i class="fa-regular fa-gauge"></i>
+								<p>2 Mbs</p>
+							</div>
+							<div class="package-data-connectionType">
+								<i class="fa-solid fa-signal-stream"></i>
+								<p>اختصاصی</p>
+							</div>
+						</div>
+						<div class="package-bottom-shape"></div>
 					</div>
 				</div>
-				<div class="package-bottom-shape"></div>
-			</div> -->
+		</div>
 
+		<div class="content">
+			<div class="package-detail ">
+
+				<div class="package">
+					<div class="package-shape">
+						<div class="package-top-shape-rectangle">
+							<div class="package-top-shape-data">
+								<h2>3 MB</h2>
+							</div>
+							<div class="package-shape-top-triangle"></div>
+						</div>
+					</div> 
+					<div class="package-data">
+						<div class="package-data-money">
+							<i class="fa-regular fa-money-bill"></i>
+							<p> 750 افغانی</p>
+						</div>
+	
+						<div class="package-data-duration">
+							<i class="fa-solid fa-calendar-days"></i>
+							<p>یک ماه</p>
+						</div>
+	
+						<div class="package-data-speed">
+							<i class="fa-regular fa-gauge"></i>
+							<p>2 Mbs</p>
+						</div>
+						<div class="package-data-connectionType">
+							<i class="fa-solid fa-signal-stream"></i>
+							<p>اختصاصی</p>
+						</div>
+					</div>
+					<div class="package-bottom-shape"></div>
+				</div>
+
+				<div class="package ">
+					<div class="package-shape">
+						<div class="package-top-shape-rectangle">
+							<div class="package-top-shape-data">
+								<h2>2 MB</h2>
+							</div>
+							<div class="package-shape-top-triangle"></div>
+						</div>
+					</div> 
+					<div class="package-data">
+						<div class="package-data-money">
+							<i class="fa-regular fa-money-bill"></i>
+							<p> 750 افغانی</p>
+						</div>
+	
+						<div class="package-data-duration">
+							<i class="fa-solid fa-calendar-days"></i>
+							<p>یک ماه</p>
+						</div>
+	
+						<div class="package-data-speed">
+							<i class="fa-regular fa-gauge"></i>
+							<p>2 Mbs</p>
+						</div>
+						<div class="package-data-connectionType">
+							<i class="fa-solid fa-signal-stream"></i>
+							<p>اختصاصی</p>
+						</div>
+					</div>
+					<div class="package-bottom-shape"></div>
+				</div>
+
+				<div class="package">
+					<div class="package-shape">
+						<div class="package-top-shape-rectangle">
+							<div class="package-top-shape-data">
+								<h2>1 MB</h2>
+							</div>
+							<div class="package-shape-top-triangle"></div>
+						</div>
+					</div> 
+					<div class="package-data">
+						<div class="package-data-money">
+							<i class="fa-regular fa-money-bill"></i>
+							<p> 750 افغانی</p>
+						</div>
+	
+						<div class="package-data-duration">
+							<i class="fa-solid fa-calendar-days"></i>
+							<p>یک ماه</p>
+						</div>
+	
+						<div class="package-data-speed">
+							<i class="fa-regular fa-gauge"></i>
+							<p>2 Mbs</p>
+						</div>
+						<div class="package-data-connectionType">
+							<i class="fa-solid fa-signal-stream"></i>
+							<p>اختصاصی</p>
+						</div>
+					</div>
+					<div class="package-bottom-shape"></div>
+				</div>
+				
+			</div>
+	</div>
 		</div>
 	</div>
 
@@ -245,82 +412,102 @@
     <script src="./script/navbar.js" defer></script>
 
 	<script>
+        
+        const tabs = document.querySelectorAll('.tab_btn');
+        const all_content = document.querySelectorAll('.content');
+
+        tabs.forEach((tab, index)=>{
+            tab.addEventListener('click', (e)=>{
+				tabs.forEach(tab=>{tab.classList.remove('active')});
+                tab.classList.add('active');
+                all_content.forEach(content => {content.classList.remove('active')});
+                all_content[index].classList.add("active");
+            });
+        })
+
+
+    </script>
+
+	<script>
 	
 
-		let package_detail = document.querySelector('.package-detail');
+		// let package_detail = document.querySelector('.package-detail');
 
 
-		let package_data = [
+		// let package_data = [
 		
 		
-		{
-			dataAmount : "75 GB",
-			money: "1500",
-			speed: "2.5 Mbs"
-		},
-		{
-			dataAmount : "45 GB",
-			money: "1199",
-			speed: "2 Mbs"
-		},
-		{
-			dataAmount : "25 GB",
-			money: "750",
-			speed: "2 Mbs"
-		},
-		{
-			dataAmount : "180 GB",
-			money: "3000",
-			speed: "3.5 Mbs"
-		},
-		{
-			dataAmount : "150 GB",
-			money: "2500",
-			speed: "3.2 Mbs"
-		},
-		{
-			dataAmount : "120 GB",
-			money: "2200",
-			speed: "3 Mbs"
-		},
+		// {
+		// 	dataAmount : "75 GB",
+		// 	money: "1500",
+		// 	speed: "2.5 Mbs"
+		// },
+		// {
+		// 	dataAmount : "45 GB",
+		// 	money: "1199",
+		// 	speed: "2 Mbs"
+		// },
+		// {
+		// 	dataAmount : "25 GB",
+		// 	money: "750",
+		// 	speed: "2 Mbs"
+		// },
+		// {
+		// 	dataAmount : "180 GB",
+		// 	money: "3000",
+		// 	speed: "3.5 Mbs"
+		// },
+		// {
+		// 	dataAmount : "150 GB",
+		// 	money: "2500",
+		// 	speed: "3.2 Mbs"
+		// },
+		// {
+		// 	dataAmount : "120 GB",
+		// 	money: "2200",
+		// 	speed: "3 Mbs"
+		// },
 
-		]
-		for (let i = 0; i < package_data.length; i++) {
-			package_detail.innerHTML += `
-		<div class="package">
-				<div class="package-shape">
-					<div class="package-top-shape-rectangle">
-						<div class="package-top-shape-data">
-							<h2>${package_data[i].dataAmount}</h2>
-						</div>
-						<div class="package-shape-top-triangle"></div>
-					</div>
-				</div> 
-				<div class="package-data">
-					<div class="package-data-money">
-						<i class="fa-regular fa-money-bill"></i>
-						<p> ${package_data[i].money} افغانی</p>
-					</div>
+		// ]
+		// for (let i = 0; i < package_data.length; i++) {
+		// 	package_detail.innerHTML += `
+		// <div class="package">
+		// 		<div class="package-shape">
+		// 			<div class="package-top-shape-rectangle">
+		// 				<div class="package-top-shape-data">
+		// 					<h2>${package_data[i].dataAmount}</h2>
+		// 				</div>
+		// 				<div class="package-shape-top-triangle"></div>
+		// 			</div>
+		// 		</div> 
+		// 		<div class="package-data">
+		// 			<div class="package-data-money">
+		// 				<i class="fa-regular fa-money-bill"></i>
+		// 				<p> ${package_data[i].money} افغانی</p>
+		// 			</div>
 
-					<div class="package-data-duration">
-						<i class="fa-solid fa-calendar-days"></i>
-						<p>یک ماه</p>
-					</div>
+		// 			<div class="package-data-duration">
+		// 				<i class="fa-solid fa-calendar-days"></i>
+		// 				<p>یک ماه</p>
+		// 			</div>
 
-					<div class="package-data-speed">
-						<i class="fa-regular fa-gauge"></i>
-						<p>${package_data[i].speed}</p>
-					</div>
-					<div class="package-data-connectionType">
-						<i class="fa-solid fa-signal-stream"></i>
-						<p>اختصاصی</p>
-					</div>
-				</div>
-				<div class="package-bottom-shape"></div>
-			</div>
+		// 			<div class="package-data-speed">
+		// 				<i class="fa-regular fa-gauge"></i>
+		// 				<p>${package_data[i].speed}</p>
+		// 			</div>
+		// 			<div class="package-data-connectionType">
+		// 				<i class="fa-solid fa-signal-stream"></i>
+		// 				<p>اختصاصی</p>
+		// 			</div>
+		// 		</div>
+		// 		<div class="package-bottom-shape"></div>
+		// 	</div>
 
-		`;
-		}
+		// `;
+		// }
+
+
+
 	</script>
 </body>
 </html>
