--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 		<i class="fa-light fa-bars fa-2x navOpenBtn "></i>
 		<ul class="horizontal-nav-items">
 
-			<li><a class="section-links" href="#offer">پیشنهاد</a></li>
+			<li><a class="section-links" href="#offer">ارتباط با ما</a></li>
 			<li><a class="section-links" href="#aboutUs">درباره ما</a></li>
 			<li>
 				<div>نمایندگی ها</div>
 				<ul class="agents">
 					<li>
-						<div>فاریاب</div>
+						<div><i class="fa-solid fa-angle-left"></i>فاریاب</div>
 						<ul>
 							<li><a href="packages.html" >میمنه</a></li>
 							<li><a href="packages.html" >اندخوی</a></li>
@@ -39,7 +39,7 @@
 						</ul>
 					</li>
 					<li>
-						<div>جوزجان</div>
+						<div><i class="fa-solid fa-angle-left"></i>جوزجان</div>
 						<ul>
 							<li><a href="packages.html" >شبرغان</a></li>
 							<li><a href="packages.html" >آقچه</a></li>
@@ -50,7 +50,7 @@
 						</ul>
 					</li>
 					<li>
-						<div>سمنگان</div>
+						<div><i class="fa-solid fa-angle-left"></i>سمنگان</div>
 						<ul>
 							<li><a href="packages.html" >ایبک</a></li>
 							<li><a href="packages.html" >خرم</a></li>
@@ -59,7 +59,7 @@
 						</ul>
 					</li>
 					<li>
-						<div>بلخ</div>
+						<div><i class="fa-solid fa-angle-left"></i>بلخ</div>
 						<ul>
 							<li><a href="packages.html" >مزارشریف</a></li>
 							<li><a href="packages.html" >بلخ</a></li>
@@ -67,7 +67,7 @@
 						</ul>
 					</li>
 					<li>
-						<div>سرپل</div>
+						<div><i class="fa-solid fa-angle-left"></i>سرپل</div>
 						<ul>
 							<li><a href="packages.html" >سرپل</a></li>
 							<li><a href="packages.html" >سانچارک</a></li>
@@ -153,7 +153,7 @@
 					</ul>
 				</li>
 				<li class="menu-item"><a class="section-links" href="#aboutUs">درباره ما</a></li>
-				<li class="menu-item"><a class="section-links" href="#offer">پیشنهاد</a></li>
+				<li class="menu-item"><a class="section-links" href="#offer">ارتباط با ما</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -424,7 +424,7 @@
 
 	<div class="proposal" id="offer">
 		<div class="proposal-title">
-			<h1>پیشنهاد</h1>
+			<h1>ارتباط با ما</h1>
 		</div>
 		<div class="proposal-detail">
 			<form>
@@ -434,7 +434,7 @@
 				</div>
 				<div>
 					<label for="ptext">پیام</label>
-					<textarea id="ptext"></textarea>
+					<textarea id="ptext" placeholder="پیشنهاد..."></textarea>
 				</div>
 				<div>
 					<button>ارسال</button>
@@ -444,7 +444,6 @@
 	</div>
 
 	<div class="footer">
-		<h1>ارتباط با ما</h1>
 		<div class="communication">
 			<div class="right-area">
 				<h3>شماره های تماس</h3>
