--- a/index.html
+++ b/index.html
@@ -443,6 +443,14 @@
 		</div>
 	</div>
 
+
+	<div class="company-container">
+		<img src="assets/Icons/company/etisalat.png" alt="">
+		<img src="assets/Icons/company/north.png" alt="">
+		<img src="assets/Icons/company/mirotik.png" alt="">
+		<img src="assets/Icons/company/tplink.png" alt="">
+	</div>
+
 	<div class="footer">
 		<div class="communication">
 			<div class="right-area">
