--- a/packages.html
+++ b/packages.html
@@ -23,66 +23,68 @@
 	<nav class="navbar">
 		<a href=""><img src="assets/images/logo.png" alt="" class="logo" width="80"></a>
 		<i class="fa-light fa-bars fa-2x navOpenBtn "></i>
-		<ul class="horizontal-nav-items">
-			<li><a href="index.html#offer">پیشنهاد</a></li>
-			<li><a href="index.html#aboutUs">درباره ما</a></li>
+		<ul class="navbar-items">
+			<li><a class="section-links" href="#offer">ارتباط با ما</a></li>
+			<li><a class="section-links" href="#aboutUs">درباره ما</a></li>
 			<li>
-				<div>نمایندگی ها</div>
-				<ul>
+				<div>
+					<p>نمایندگی ها</p>
+				</div>
+				<ul class="vertical-navbar">
 					<li>
-						<div>فاریاب</div>
-						<ul>
-							<li><a href="packages.html">میمنه</a></li>
-							<li><a href="packages.html">اندخوی</a></li>
-							<li><a href="packages.html">شیرین تگاب</a></li>
-							<li><a href="packages.html">کولیان</a></li>
+						<div><i class="fa-solid fa-angle-left"></i>فاریاب</div>
+						<ul class="vertical-navbar-items">
+							<li><a href="packages.html" >میمنه</a></li>
+							<li><a href="packages.html" >اندخوی</a></li>
+							<li><a href="packages.html" >شیرین تگاب</a></li>
+							<li><a href="packages.html" >کولیان</a></li>
 						</ul>
 					</li>
 					<li>
-						<div>جوزجان</div>
-						<ul>
-							<li><a href="packages.html">شبرغان</a></li>
-							<li><a href="packages.html">آقچه</a></li>
-							<li><a href="packages.html">فیض آباد</a></li>
-							<li><a href="packages.html">خواجه دوه کوه</a></li>
-							<li><a href="packages.html">درزآب</a></li>
-							<li><a href="packages.html">قوش تپه</a></li>
+						<div><i class="fa-solid fa-angle-left"></i>جوزجان</div>
+						<ul class="vertical-navbar-items">
+							<li><a href="packages.html" >شبرغان</a></li>
+							<li><a href="packages.html" >آقچه</a></li>
+							<li><a href="packages.html" >فیض آباد</a></li>
+							<li><a href="packages.html" >خواجه دوه کوه</a></li>
+							<li><a href="packages.html" >درزآب</a></li>
+							<li><a href="packages.html" >قوش تپه</a></li>
 						</ul>
 					</li>
 					<li>
-						<div>سمنگان</div>
-						<ul>
-							<li><a href="packages.html">ایبک</a></li>
-							<li><a href="packages.html">خرم</a></li>
-							<li><a href="packages.html">سارباغ</a></li>
-							<li><a href="packages.html"> دره صوف بالا</a></li>
+						<div><i class="fa-solid fa-angle-left"></i>سمنگان</div>
+						<ul class="vertical-navbar-items">
+							<li><a href="packages.html" >ایبک</a></li>
+							<li><a href="packages.html" >خرم</a></li>
+							<li><a href="packages.html" >سارباغ</a></li>
+							<li><a href="packages.html" > دره صوف بالا</a></li>
 						</ul>
 					</li>
 					<li>
-						<div>بلخ</div>
-						<ul>
-							<li><a href="packages.html">مزارشریف</a></li>
-							<li><a href="packages.html">بلخ</a></li>
-							<li><a href="packages.html">کود برق</a></li>
+						<div><i class="fa-solid fa-angle-left"></i>بلخ</div>
+						<ul class="vertical-navbar-items">
+							<li><a href="packages.html" >مزارشریف</a></li>
+							<li><a href="packages.html" >بلخ</a></li>
+							<li><a href="packages.html" >کود برق</a></li>
 						</ul>
 					</li>
 					<li>
-						<div>سرپل</div>
-						<ul>
-							<li><a href="packages.html">سرپل</a></li>
-							<li><a href="packages.html">سانچارک</a></li>
-							<li><a href="packages.html">گوسفندی</a></li>
-							<li><a href="packages.html">بلخاب</a></li>
+						<div><i class="fa-solid fa-angle-left"></i>سرپل</div>
+						<ul class="vertical-navbar-items">
+							<li><a href="packages.html" >سرپل</a></li>
+							<li><a href="packages.html" >سانچارک</a></li>
+							<li><a href="packages.html" >گوسفندی</a></li>
+							<li><a href="packages.html" >بلخاب</a></li>
 						</ul>
 					</li>
 				</ul>
 			</li>
-			<li><a href="index.html#services">خدمات ما</a></li>
-
-			<li><a href="index.html#home">صفحه اصلی</a></li>
+			<li><a class="section-links" href="#services">خدمات ما</a></li>
+			<li><a class="section-links" href="#home">صفحه اصلی</a></li>
 
 		</ul>
 	</nav>
+	
 	<section class="overlay"></section>
 	<nav class="sidebar">
 		<div class="sidebar-profile">
@@ -159,15 +161,6 @@
 	</nav>
 
 
-	<div class="info content-center">
-		<h2>لورم ایپسوم</h2>
-		<p>
-			لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
-		</p>
-		<p>
-			لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
-		</p>
-	</div>
 
 	<div class="packages">
 		<div class="package-controller tabs">
@@ -430,6 +423,20 @@
 
 	<script>
 	
+
+
+	let package_data = [
+		{
+			packages:{
+				unlimited:[],
+				limited: [],
+				family: []
+			},
+			information: {
+
+			},
+		}
+	]
 
 		// let package_detail = document.querySelector('.package-detail');
 
