--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
 	<nav class="navbar">
 		<a href=""><img src="assets/images/logo.png" alt="" class="logo" width="80"></a>
 		<i class="fa-light fa-bars fa-2x navOpenBtn "></i>
-		<ul class="horizontal-nav-items">
-
+		<ul class="navbar-items">
 			<li><a class="section-links" href="#offer">ارتباط با ما</a></li>
 			<li><a class="section-links" href="#aboutUs">درباره ما</a></li>
 			<li>
-				<div>نمایندگی ها</div>
-				<ul class="agents">
+				<div>
+					<p>نمایندگی ها</p>
+				</div>
+				<ul class="vertical-navbar">
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>فاریاب</div>
-						<ul>
+						<ul class="vertical-navbar-items">
 							<li><a href="packages.html" >میمنه</a></li>
 							<li><a href="packages.html" >اندخوی</a></li>
 							<li><a href="packages.html" >شیرین تگاب</a></li>
@@ -40,7 +41,7 @@
 					</li>
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>جوزجان</div>
-						<ul>
+						<ul class="vertical-navbar-items">
 							<li><a href="packages.html" >شبرغان</a></li>
 							<li><a href="packages.html" >آقچه</a></li>
 							<li><a href="packages.html" >فیض آباد</a></li>
@@ -51,7 +52,7 @@
 					</li>
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>سمنگان</div>
-						<ul>
+						<ul class="vertical-navbar-items">
 							<li><a href="packages.html" >ایبک</a></li>
 							<li><a href="packages.html" >خرم</a></li>
 							<li><a href="packages.html" >سارباغ</a></li>
@@ -60,7 +61,7 @@
 					</li>
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>بلخ</div>
-						<ul>
+						<ul class="vertical-navbar-items">
 							<li><a href="packages.html" >مزارشریف</a></li>
 							<li><a href="packages.html" >بلخ</a></li>
 							<li><a href="packages.html" >کود برق</a></li>
@@ -68,7 +69,7 @@
 					</li>
 					<li>
 						<div><i class="fa-solid fa-angle-left"></i>سرپل</div>
-						<ul>
+						<ul class="vertical-navbar-items">
 							<li><a href="packages.html" >سرپل</a></li>
 							<li><a href="packages.html" >سانچارک</a></li>
 							<li><a href="packages.html" >گوسفندی</a></li>
@@ -78,11 +79,11 @@
 				</ul>
 			</li>
 			<li><a class="section-links" href="#services">خدمات ما</a></li>
-
 			<li><a class="section-links" href="#home">صفحه اصلی</a></li>
 
 		</ul>
 	</nav>
+	
 	<section class="overlay"></section>
 	<nav class="sidebar">
 		<div class="sidebar-profile">
@@ -511,6 +512,8 @@
 
 
 <script defer>
+
+
 
 	
 window.onload = () => {
