--- a/packages.html
+++ b/packages.html
@@ -24,8 +24,8 @@
 		<a href=""><img src="assets/images/logo.png" alt="" class="logo" width="80"></a>
 		<i class="fa-light fa-bars fa-2x navOpenBtn "></i>
 		<ul class="navbar-items">
-			<li><a class="section-links" href="#offer">ارتباط با ما</a></li>
-			<li><a class="section-links" href="#aboutUs">درباره ما</a></li>
+			<li><a class="section-links" href="index.html#offer">ارتباط با ما</a></li>
+			<li><a class="section-links" href="index.html#aboutUs">درباره ما</a></li>
 			<li>
 				<div>
 					<p>نمایندگی ها</p>
@@ -79,8 +79,8 @@
 					</li>
 				</ul>
 			</li>
-			<li><a class="section-links" href="#services">خدمات ما</a></li>
-			<li><a class="section-links" href="#home">صفحه اصلی</a></li>
+			<li><a class="section-links" href="index.html#services">خدمات ما</a></li>
+			<li><a class="section-links" href="index.html#home">صفحه اصلی</a></li>
 
 		</ul>
 	</nav>
