--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<li><a class="section-links" href="#aboutUs">درباره ما</a></li>
 			<li>
 				<div>
-					<p>نمایندگی ها</p>
+					<p><i class="fa-solid fa-angle-left"></i>نمایندگی ها</p>
 				</div>
 				<ul class="vertical-navbar">
 					<li>
