--- a/packages.html
+++ b/packages.html
@@ -28,8 +28,7 @@
 			<li><a class="section-links" href="index.html#aboutUs">درباره ما</a></li>
 			<li>
 				<div>
-					<i class="fa-solid fa-angle-left"></i>
-					<p>نمایندگی ها</p>
+					<p><i class="fa-solid fa-angle-left"></i>نمایندگی ها</p>
 				</div>
 				<ul class="vertical-navbar">
 					<li>
