--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 		<div class="sidebar-content">
 			<ul class="menu">
-				<li class="menu-item"><a class="section-links" href="#home">صفحه اصلی</a></li>
+				<li class="menu-item"><a class="section-links active" href="#home">صفحه اصلی</a></li>
 				<li class="menu-item"><a class="section-links" href="#services">خدمات ما</a></li>
 				<li class="menu-item">
 					<div><i class="fa-solid fa-plus"></i><span>نمایندگی ها</span></div>
@@ -525,13 +525,6 @@ const links = document.querySelectorAll(".section-links");
   links.forEach((link) => {
 	  link.addEventListener("click", (e) =>{
 		  e.preventDefault();
-		//   links.forEach(link => {
-        //         if(link.classList.contains("active")){
-        //             link.classList.remove("active");
-        //         };
-        //     });
-
-		//   link.classList.add("active");
 		  document.querySelector(e.target.hash).scrollIntoView({
 			  behavior: "smooth"
 		  })
@@ -540,50 +533,44 @@ const links = document.querySelectorAll(".section-links");
 
 
 
-let sections = document.querySelectorAll('.section');
+
+
+const sections = document.querySelectorAll('.section');
 let current = '';
 
-window.addEventListener('scroll', () => {
-    
-    sections.forEach((section, index) => {
-        let sectionTop = section.offsetTop;
-		if(index == 0){
-			if (scrollY >= sectionTop) {
-            current = section.getAttribute('id');
-        	}
-		}
+function setActiveLink() {
 
-		if(index == 1){
-			if (scrollY >= sectionTop - 60) {
-            current = section.getAttribute('id');
-        	}
-		}
-		if(index == 2){
-			if (scrollY >= sectionTop - 110) {
-            current = section.getAttribute('id');
-        	}
-		}
-		if(index == 3){
-			if (scrollY >= sectionTop - 120) {
-            current = section.getAttribute('id');
-        	}
-		}
-    });
 
-	if(!document.querySelector('.navbar-items > li:has( > a) a[href*= ' + current + ']').classList.contains('active')){
+	const activeNavbarLink = document.querySelector(`.navbar-items > li:has( > a) > a[href*='${current}']`);
+	const activeSidbarLink = document.querySelector(`.menu > .menu-item > a[href*='${current}']`);
+
+	if(!activeNavbarLink.classList.contains('active') && !activeSidbarLink.classList.contains('active')){
 		links.forEach(link => {
-                if(link.classList.contains("active")){
-                    link.classList.remove("active");
-                };
-				document.querySelector('.navbar-items > li:has( > a) a[href*= ' + current + ']').classList.add('active');
-    });
-
+			link.classList.remove("active");
+    	});
+		activeNavbarLink.classList.add('active');
+		activeSidbarLink.classList.add('active');
 	}
 
-	
-  
-});
+}
 
+function updateCurrentSection() {
+    sections.forEach((section, index) => {
+        const sectionTop = section.offsetTop;
+        if (index === 0 && scrollY >= sectionTop) {
+            current = section.getAttribute('id');
+        } else if (index === 1 && scrollY >= sectionTop - 60) {
+            current = section.getAttribute('id');
+        } else if (index === 2 && scrollY >= sectionTop - 110) {
+            current = section.getAttribute('id');
+        } else if (index === 3 && scrollY >= sectionTop - 120) {
+            current = section.getAttribute('id');
+        }
+    });
+    setActiveLink();
+}
+
+window.addEventListener('scroll', updateCurrentSection);
 
 
 </script>
