--- a/index.html
+++ b/index.html
@@ -537,6 +537,7 @@ const links = document.querySelectorAll(".section-links");
 
 const sections = document.querySelectorAll('.section');
 let current = '';
+let activeTagStatus = true;
 
 function setActiveLink() {
 
