--- a/index.html
+++ b/index.html
@@ -198,93 +198,109 @@
 		<div class="service-title">
 			<h1>خدمات ما</h1>
 		</div>
-		<div class="service-cards">
-
-
-			<div class="service-item">
-				<div class="service-item-title">
-					<h3>مایکروویو</h3>
+		<div class="service-items">
+			<div class="service-card">
+					<div class="service-card-top-shape">
+						<div class="service-card-top-right-shape"></div>
+						<div class="service-card-top-left-shape"></div>
+						<h4>مایکروویو</h4>
+					</div>
+					<div class="service-icon">
+						<i class="fa-solid fa-tower-cell"></i>
+					</div>
+					<div class="service-description">
+						<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+					</div>
+					<div class="service-card-bottom-shape">
+						<div class="service-card-bottom-shape-inner"></div>
+					</div>
 				</div>
-				<div class="service-icon">
-					<i class="fa-solid fa-tower-cell"></i>
+			
+			<div class="service-card">
+					<div class="service-card-top-shape">
+						<div class="service-card-top-right-shape"></div>
+						<div class="service-card-top-left-shape"></div>
+						<h4>ویست</h4>
+					</div>
+					<div class="service-icon">
+						<i class="fa-solid fa-satellite-dish"></i>
+					</div>
+					<div class="service-description">
+						<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+					</div>
+					<div class="service-card-bottom-shape">
+						<div class="service-card-bottom-shape-inner"></div>
+					</div>
 				</div>
-				<div class="service-description">
-					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+			
+			<div class="service-card">
+					<div class="service-card-top-shape">
+						<div class="service-card-top-right-shape"></div>
+						<div class="service-card-top-left-shape"></div>
+						<h4>وایرلس</h4>
+					</div>
+					<div class="service-icon">
+						<i class="fa-solid fa-signal-stream"></i>
+					</div>
+					<div class="service-description">
+						<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+					</div>
+					<div class="service-card-bottom-shape">
+						<div class="service-card-bottom-shape-inner"></div>
+					</div>
 				</div>
-				<div class="service-item-footer"></div>
+			
+			<div class="service-card">
+					<div class="service-card-top-shape">
+						<div class="service-card-top-right-shape"></div>
+						<div class="service-card-top-left-shape"></div>
+						<h4>تجهیزات<br><span>امنیتی</span></h4>
+					</div>
+					<div class="service-icon">
+						<i class="fa-solid fa-fingerprint"></i>
+					</div>
+					<div class="service-description">
+						<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+					</div>
+					<div class="service-card-bottom-shape">
+						<div class="service-card-bottom-shape-inner"></div>
+					</div>
+				</div>
+			
+			<div class="service-card">
+					<div class="service-card-top-shape">
+						<div class="service-card-top-right-shape"></div>
+						<div class="service-card-top-left-shape"></div>
+						<h4>کمره های<br><span>امنیتی</span></h4>
+					</div>
+					<div class="service-icon">
+						<i class="fa-solid fa-camera-cctv"></i>
+					</div>
+					<div class="service-description">
+						<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+					</div>
+					<div class="service-card-bottom-shape">
+						<div class="service-card-bottom-shape-inner"></div>
+					</div>
+				</div>
+			
+			<div class="service-card">
+					<div class="service-card-top-shape">
+						<div class="service-card-top-right-shape"></div>
+						<div class="service-card-top-left-shape"></div>
+						<h4>شبکه سازی</h4>
+					</div>
+					<div class="service-icon">
+						<i class="fa-solid fa-network-wired"></i>
+					</div>
+					<div class="service-description">
+						<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+					</div>
+					<div class="service-card-bottom-shape">
+						<div class="service-card-bottom-shape-inner"></div>
+					</div>
+				</div>
 			</div>
-			<div class="service-item">
-				<div class="service-item-title">
-					<h3>ویست</h3>
-				</div>
-				<div class="service-icon">
-					<i class="fa-solid fa-satellite-dish"></i>
-				</div>
-				<div class="service-description">
-					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-				</div>
-				<div class="service-item-footer"></div>
-			</div>
-
-			<div class="service-item">
-				<div class="service-item-title">
-					<h3>وایرلس</h3>
-				</div>
-				<div class="service-icon">
-					<i class="fa-solid fa-signal-stream"></i>
-				</div>
-				<div class="service-description">
-					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-				</div>
-				<div class="service-item-footer"></div>
-			</div>
-
-			<div class="service-item">
-				<div class="service-item-title">
-					<h3>تجهیزات
-						<br>
-						<span>امنیتی</span>
-					</h3>
-				</div>
-				<div class="service-icon">
-					<i class="fa-solid fa-fingerprint"></i>
-				</div>
-				<div class="service-description">
-					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-				</div>
-				<div class="service-item-footer"></div>
-			</div>
-
-			<div class="service-item">
-				<div class="service-item-title">
-					<h3>کمره های
-						<br>
-						<span>امنیتی</span>
-					</h3>
-				</div>
-				<div class="service-icon">
-					<i class="fa-solid fa-camera-cctv"></i>
-				</div>
-				<div class="service-description">
-					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-				</div>
-				<div class="service-item-footer"></div>
-			</div>
-
-			<div class="service-item">
-				<div class="service-item-title">
-					<h3>شبکه سازی</h3>
-				</div>
-				<div class="service-icon">
-					<i class="fa-solid fa-network-wired"></i>
-				</div>
-				<div class="service-description">
-					<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-				</div>
-				<div class="service-item-footer"></div>
-			</div>
-
-		</div>
 
 	</div>
 
@@ -572,6 +588,7 @@ function updateCurrentSection() {
 }
 
 window.addEventListener('scroll', updateCurrentSection);
+
 
 
 </script>
